# SQLPilot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: config.example.yaml
prompts/: main_agent.py
scripts/: init_data.py
sqlpilot/: __main__.py
sqlpilot/api/: app.py  models.py
sqlpilot/api/routes/: health.py  optimize.py
sqlpilot/cli/: main.py
sqlpilot/core/: agent.py  config.py  llm.py  tools.py
sqlpilot/database/: base.py  mysql.py
sqlpilot/prompts/: main_agent.py
sqlpilot/utils/: security.py
tests/: conftest.py  test_agent_iteration.py  test_api.py  test_api_advanced.py  test_core_tools.py  test_prompts.py
